package Árboles;

public interface DuplicateSearchTree<T> {
    void removeOne(T data);
}